@@ -1,4 +1,4 @@
-/* $Id: acconfig.h,v 1.13 1997/12/31 20:38:25 wessels Exp $ */
+/* $Id: acconfig.h,v 1.14 1997/12/31 20:41:55 wessels Exp $ */
 
 /* Define if struct tm has tm_gmtoff member */
 #undef HAVE_TM_GMTOFF
@@ -62,4 +62,10 @@
 
 /* Define to have malloc statistics */
 #undef XMALLOC_STATISTICS
+
+/* Define to have a detailed trace of memory allocations */
+#undef XMALLOC_COUNT
+
+/* Define to use async disk I/O operations */
+#undef USE_ASYNC_IO
 
