@@ -3,13 +3,13 @@ dnl  Configuration input file for Squid
 dnl
 dnl  Duane Wessels, wessels@nlanr.net, February 1996 (autoconf v2.9)
 dnl
-dnl  $Id: configure.in,v 1.87 1997/12/31 20:38:24 wessels Exp $
+dnl  $Id: configure.in,v 1.88 1997/12/31 20:41:56 wessels Exp $
 dnl
 dnl
 dnl
 AC_INIT(src/main.c)
 AC_CONFIG_HEADER(include/autoconf.h)
-AC_REVISION($Revision: 1.87 $)dnl
+AC_REVISION($Revision: 1.88 $)dnl
 AC_PREFIX_DEFAULT(/usr/local/squid)
 AC_CONFIG_AUX_DIR(aux)
 
@@ -418,10 +418,19 @@ AC_ARG_ENABLE(hashkey,
 ])
 
 AC_ARG_ENABLE(xmalloc_debug,
-[  --enable-xmalloc-debug  Do sime simple malloc debugging],
+[  --enable-xmalloc-debug  Do some simple malloc debugging],
 [ if test "$enableval" = "yes" ; then
     echo "Malloc debugging enabled"
     AC_DEFINE(XMALLOC_DEBUG)
+  fi
+])
+
+AC_ARG_ENABLE(xmalloc_debug_count,
+[  --enable-xmalloc-debug-count
+                          Detailed trace of memory allocations],
+[ if test "$enableval" = "yes" ; then
+    echo "Malloc tracing enabled"
+    AC_DEFINE(XMALLOC_COUNT)
   fi
 ])
 
@@ -433,7 +442,15 @@ AC_ARG_ENABLE(xmalloc_statistics,
     AC_DEFINE(XMALLOC_STATISTICS)
   fi
 ])
-  
+
+AC_ARG_ENABLE(async_io,
+[  --enable-async-io       Use ASYNC disk I/O],
+[ if test "$enableval" = "yes" ; then
+    echo "Async I/O enabled"
+    AC_DEFINE(USE_ASYNC_IO)
+  fi
+])
+
 AC_MSG_CHECKING(if GNUregex needs to be compiled)
 if test "$ac_cv_func_regcomp" = "no" ; then
 	USE_GNUREGEX="yes"
